--- a/posts/research-archives/references.bib
+++ b/posts/research-archives/references.bib
@@ -33,7 +33,7 @@ abstract = {The game of poker has been identified as a beneficial domain for cur
   title={Optimization Methods in Finance},
   author={Cornu{\'e}jols, G. and Pe{\~n}a, J. and T{\"u}t{\"u}nc{\"u}, R.},
   isbn={9781108597944},
-  url={https://books.google.com/books?id=Dq1jDwAAQBAJ},
+  url={https://web.math.ku.dk/~rolf/CT_FinOpt.pdf},
   year={2018},
   publisher={Cambridge University Press}
 }
