--- a/posts/research-archives/references.bib
+++ b/posts/research-archives/references.bib
@@ -37,3 +37,12 @@ abstract = {The game of poker has been identified as a beneficial domain for cur
   year={2018},
   publisher={Cambridge University Press}
 }
+
+@misc{vaswani2017attention,
+      title={Attention Is All You Need}, 
+      author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+      year={2017},
+      eprint={1706.03762},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
